# libasync

./: .gitignore  .gitmodules  README.md  build_async.sh  configure.ac
libasync/: Makefile
libasync/lib_build/: Kbuild
libasync/module_build/: Kbuild
libasync/module_build/.tmp_versions/: libasync.mod
libasync/src/common/: awe-mapper.c  thc.c  thc_ipc.c  thcsync.c
libasync/src/include/: awe-mapper.h  kliblcd.h  thc.h  thc_ipc.h  thc_ipc_types.h  thcinternal.h
libasync/tests/: Kbuild  Makefile  callee.c  caller.c  main.c
libasync/tests/dispatch/: thc_dispatch_test.c
libasync/tests/simple/: callee.c  caller.c  main.c
libasync/tests/simple/.tmp_versions/: libasync_test.mod
src/: Kbuild.in  Makefile  Makefile.am  awe_mapper.c  awe_mapper.h  path.asm  path.c  path_do_finish.c  test.c  test_helpers.h  thc.c  thc.h  thcinternal.h
src/common/: awe_mapper.c  main.c  thc.c  thc_ipc.c  thcsync.c
src/include/: Makefile.am  awe-mapper.h  awe_mapper.h  benchmark.h  thc.h  thc_ipc.h  thc_ipc_types.h  thcinternal.h  thcsync.h
src/platform/kernel/: Kbuild.in  Makefile.am
src/tests/: Kbuild.in  Makefile.am  test_helpers.c  test_helpers.h
src/tests/.tmp_versions/: libasync_test.mod
src/tests/abort/: Kbuild.in  main.c
src/tests/async-msg-benchmarks/: Kbuild.in  callee.c  caller.c  rpc.h
src/tests/create-tear-down/: Kbuild.in  main.c
src/tests/ctx-switch/: Kbuild.in  main.c  test.c
src/tests/dispatch/: Kbuild.in  main.c  rpc.h  thc_dispatch_test.c  thc_dispatch_test.h  thread1_fn.c  thread2_fn.c  thread3_fn.c  thread_fn_util.c  thread_fn_util.h
src/tests/simple/: Kbuild  Kbuild.in  callee.c  caller.c  rpc.h
