
# D=install dir (something/lib)
install-tests:
	cp $(LIBASYNC_TESTS_KBUILD)/simple/libasync_test_simple.ko $(D)
	cp $(LIBASYNC_TESTS_KBUILD)/dispatch/libfipc_test_dispatch_loop.ko $(D)
	cp $(LIBASYNC_TESTS_KBUILD)/ctx-switch/ctx_switch_test.ko $(D)
	cp $(LIBASYNC_TESTS_KBUILD)/async-msg-benchmarks/libasync_test_msgs.ko $(D)
	cp $(LIBASYNC_TESTS_KBUILD)/abort/libasync_test_abort.ko $(D)
	cp $(LIBASYNC_TESTS_KBUILD)/create-tear-down/create_tear_down_test.ko $(D)
